--- a/D-Day_counter/index.html
+++ b/D-Day_counter/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>D-Day_counter</title>
-    <style>
-      /* body {
-      } */
-    </style>
+    <link rel="stylesheet" href="style.css" />
     <script src="./main.js"></script>
   </head>
   <body>
