--- a/D-Day_counter/index.html
+++ b/D-Day_counter/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>D-Day_counter</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="./main.js"></script>
+    <script src="./main.js" defer></script>
   </head>
   <body>
     <h1>D-Day</h1>
@@ -27,7 +27,7 @@
         <span>초</span>
       </div>
     </div>
-
+    <div id="d-day-message"></div>
     <div id="target-selector">
       <input id="target-year-input" class="target-input" size="5" /> -
       <input id="target-month-input" class="target-input" size="5" /> -
